--- a/static_in_env/our_static/css/main.css
+++ b/static_in_env/our_static/css/main.css
@@ -31,7 +31,7 @@ header .tobottom{
 
 .navbar-default{
     /*background: transparent none repeat;*/
-    background: rgba(0, 0, 0, .3);
+    background: rgba(0, 0, 0, .8);
     border: none;
     box-shadow: none;
 }
@@ -56,12 +56,9 @@ header .tobottom{
 .navbar-default .navbar-nav>li>a>i:hover{
 	color: #ffffff;
 }
-
-
 .navbar-toggle{
     border-radius: 0 !important;
 }
-
 .navbar-default .navbar-toggle{
     color: #FFFFFF !important;
 }
@@ -72,7 +69,6 @@ header .tobottom{
 .navbar-default .navbar-toggle:focus{
 	background-color: transparent !important;
 }
-
 .navbar-default .navbar-toggle .icon-bar{
     color: #FFFFFF !important;
     border-color: #FFFFFF !important;
@@ -81,8 +77,6 @@ header .tobottom{
 .logo{
 	padding-top: 220px;
 }
-
-
 .sendform{
     color: #FFFFFF;
     height: 180px;
@@ -106,7 +100,6 @@ header .tobottom{
     width: 100%;
     line-height: 40px;
 }
-
 .sendform .form-inline .form-control{
 	font-family: "MuseoSansCyrl100", sans-serif;
     width: 100%;
@@ -128,8 +121,6 @@ header .tobottom{
 .sendform .form-inline .form-control::-moz-placeholder          {color:#8f735a;}/* Firefox 19+ */
 .sendform .form-inline .form-control:-moz-placeholder           {color:#8f735a;}/* Firefox 18- */
 .sendform .form-inline .form-control:-ms-input-placeholder      {color:#8f735a;}
-
-
 .sendform .form-inline .form-group,
 .sendform .formcontent > div{
     padding: 15px;
@@ -142,7 +133,6 @@ header .tobottom{
     border-radius: 0;
     box-shadow: none;
     width: 100%;
-
     font-size: 18px;
     font-weight: 700;
     padding: 0;
@@ -153,7 +143,6 @@ header .tobottom{
     border: none;
     color: #FFFFFF;
 }
-
 .sendform .formcontent .tel > span{
     display: block;
 	font-family: "MuseoSansCyrl100", sans-serif;
@@ -166,14 +155,12 @@ header .tobottom{
     left: 17px;
     font-size: 28px;
 }
-
 .sendform .formcontent .tel > a {
     text-decoration: none;
     color: #FFFFFF;
 	font-family: "MuseoSansCyrl300", sans-serif;
     font-size: 18px;
 }
-
 /* section welcome*/
 .welcome{
 	min-height: 450px;
@@ -183,7 +170,6 @@ header .tobottom{
 .welcome .container .row > div > h3{
 	padding-top: 25px;
 }
-
 .welcome h3{
 	font-family: "MuseoSansCyrl300", sans-serif;
 	font-size: 30px;
@@ -193,7 +179,6 @@ header .tobottom{
 	font-family: "MuseoSansCyrl100", sans-serif;
 	font-size: 24px;
 }
-
  /*section takewithyou*/
 .takewithyou{
 	background: url("/static/img/takewithyou.jpg") no-repeat;
@@ -247,8 +232,6 @@ header .tobottom{
 	padding: 30px 0 35px 0;
 	font-family: "MuseoSansCyrl500", sans-serif;
 }
-
-
 #owl-demo .item{
   display: block;
   padding: 0 15px 0 15px;
@@ -270,9 +253,7 @@ header .tobottom{
 .owl-theme .owl-controls{
 	margin: 0;
 	padding-top: 20px;
-
 }
-
 .owl-theme .owl-controls .owl-buttons div {
 	position: absolute;
 	opacity: 1;
@@ -288,13 +269,11 @@ header .tobottom{
 	top: 155px;
 	background-color: transparent !important;
 }
-
 .owl-theme .owl-controls .owl-buttons .owl-next{
 	right: -50px;
 	top: 155px;
 	background-color: transparent !important;
 }
-
 .gallery .owl-theme .owl-controls .owl-page span{
 	height: 12px;
     width: 12px;
@@ -310,9 +289,7 @@ header .tobottom{
 .gallery .owl-theme .owl-controls .owl-page.active span{
 	background-color: #8f735a;
 	border: none;
-
 }
-
 /* section coffe book */
 .coffeebook{
 	background: url("/static/img/coffeebook_bg.jpg") no-repeat top center fixed;
@@ -324,7 +301,6 @@ header .tobottom{
 	min-height: 815px;
 	font-size: 26px;
 }
-
 .coffeebook .shelf{
 /*	background: url("/static/img/shelf.png") no-repeat;
 	background-position: center;
@@ -341,6 +317,7 @@ header .tobottom{
 .coffeebook .shelf img{
 	position: absolute;
 	top: 150px;
+	left: 0;
 }
 .coffeebook .shelf h1{
 	font-family: "MuseoSansCyrl500", sans-serif;
@@ -360,7 +337,6 @@ header .tobottom{
 .coffeebook .postbook{
 		padding-top: 70px;
 }
-
 .coffeebook .infoblock{
 	display: block;
 	min-height: 205px;
@@ -400,7 +376,6 @@ header .tobottom{
 .coffeebook .infoblock.active span{
 	color: #FFFFFF;
 }
-
 /* section cups*/
 .cups{
 	min-height: 550px;
@@ -412,14 +387,113 @@ header .tobottom{
 	text-transform: uppercase;
 	text-align: center;
 	line-height: 48px;
+	padding-top: 85px;
 }
 .cups .container{
 	position: relative;
 	top: -125px;
-	z-index: 15px;
+	z-index: 15;
 }
 /*section map*/
+
 .map{
 	min-height: 500px;
 	background: #8f735a;
+	text-align: left;
 }
+.map .row div{
+	padding: 0;
+
+}
+
+.map iframe{
+	pointer-events: none;
+}
+.map .info{
+	padding: 50px 70px !important;
+}
+.map .contacts{
+	padding-bottom: 20px !important;
+}
+.map .worktime{
+
+}
+.map h1{
+	font-family: "MuseoSansCyrl500", sans-serif;
+	font-size: 30px;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	padding-bottom: 20px;
+}
+.map h2{
+	font-family: "MuseoSansCyrl500", sans-serif;
+	font-size: 20px;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	padding-bottom: 15px;
+}
+.map p{
+	font-family: "MuseoSansCyrl100", sans-serif;
+	font-size: 20px;
+	color: #2e1a13;
+}
+.map p:nth-child(2){
+	font-family: "MuseoSansCyrl300", sans-serif;
+}
+.map i{
+	position: absolute;
+	color: #2e1a13;
+	left: -30px;
+	font-size: 25px;
+	line-height: 30px;
+}
+
+/* footer */
+footer{
+	background: #2e1a13;
+	min-height: 75px;
+	color: #8F735A !important;
+}
+footer .container{
+	padding-top: 15px;
+}
+.foot_links,
+.social_links{
+	padding: 0;
+	margin: 0;
+}
+.foot_links li{
+	font-family: "MuseoSansCyrl300", sans-serif;
+	font-size: 14px;
+	text-transform: uppercase;
+	list-style: none;
+	color: #8f735a !important;
+	display: block;
+	line-height: 45px;
+	padding: 0 15px 0 15px;
+	float: left;
+}
+.social_links li{
+	font-size: 14px;
+	color: #7b6550 !important;
+	display: block;
+	line-height: 25px;
+	padding: 0 15px 0 15px;
+	float: left;
+}
+.social_links i{
+	font-size: 36px;
+	color: #7b6550;
+}
+.foot_links a{
+	text-decoration: none;
+	color: #7b6550;
+}
+.foot_links a:hover,
+.social_links i:hover{
+	color: #FFFFFF;
+}
+.social_links i{
+	color: #7b6550;
+}
+
