--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,34 +3,31 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
           <div class="row">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-
-            <ul class="nav navbar-nav navbar-left">
-                <li><a href="#header">Кава</a></li>
-                <li><a href="#welcome" >Вітаю</a></li>
-                <li><a href="#takewithyou">Візьми з собою</a></li>
-                <li><a href="#gallery">Наші смаколики</a></li>
-                <li><a href="#coffeebook">Новини</a></li>
-                <li><a href="#coffeebook">Контакти</a></li>
-            </ul>
-
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="my my_d"></i></a></li>
-                <li><a href="#"><i class="my my_h"></i></a></li>
-                <li><a href="#"><i class="my my_b"></i></a></li>
-                <li><a href="#"><i class="my my_f"></i></a></li>
-              </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="#header">Кава</a></li>
+                    <li><a href="#welcome" >Вітаю</a></li>
+                    <li><a href="#takewithyou">Візьми з собою</a></li>
+                    <li><a href="#gallery">Наші смаколики</a></li>
+                    <li><a href="#coffeebook">Новини</a></li>
+                    <li><a href="#cont">Контакти</a></li>
+                </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="my my_d"></i></a></li>
+                    <li><a href="#"><i class="my my_h"></i></a></li>
+                    <li><a href="#"><i class="my my_b"></i></a></li>
+                    <li><a href="#"><i class="my my_f"></i></a></li>
+                  </ul>
+            </div><!--/.nav-collapse -->
+          </div>
       </div>
     </nav>
 {% endblock %}
