--- a/templates/loadcss.html
+++ b/templates/loadcss.html
@@ -1,15 +1,15 @@
 {% load staticfiles %}
 <!-- core CSS -->
-    <link href="{% static "libs/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
-    <link href="{% static "libs/bootstrap/css/bootstrap-theme.min.css" %}" rel="stylesheet">
-    <link href="{% static "libs/myFonts/stylesheet.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "libs/bootstrap/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "libs/bootstrap/css/bootstrap-theme.min.css" %}">
+    <link rel="stylesheet" href="{% static "libs/myFonts/stylesheet.css" %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "libs/owl-carousel/owl.carousel.css" %}">
     <link rel="stylesheet" href="{% static "libs/owl-carousel/owl.theme.css" %}">
 
-    <link href="{% static "css/fonts.css" %}" rel="stylesheet">
-    <link href="{% static "css/main.css" %}" rel="stylesheet">
-    <link href="{% static "css/media.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/fonts.css" %}">
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{% static "css/media.css" %}">
 
 
 
