--- a/templates/loadjs.html
+++ b/templates/loadjs.html
@@ -6,7 +6,10 @@
     <![endif]-->
 
     <script src="{% static "libs/jquery/jquery-1.11.3.min.js" %}"></script>
+    <script src="{% static "libs/jQuery_form/jquery.form.min.js" %}"></script>
     <script src="{% static "libs/bootstrap/js/bootstrap.min.js"%}"></script>
     <script src="{% static "libs/owl-carousel/owl.carousel.js" %}"></script>
+	<script src="{% static "libs/YTPlayer/jquery.mb.YTPlayer.js" %}"></script>
+	<script src="{% static "libs/device/device.min.js" %}"></script>
     <script src="{% static "libs/animate/animate-css.js"%}"></script>
     <script src="{% static "js/common.js"%}"></script>
