--- a/templates/base.html
+++ b/templates/base.html
@@ -44,30 +44,26 @@
         <div class="tobottom">
             <div class="sendform">
                 <span><h1>Доставка меленої кави та кави в зернах</h1></span>
-                <form class="form-inline" method="post" action="">{% csrf_token %}
+                <form id="ajaxform" class="form-inline" method="post" action="{% url "home" %}">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
                     <div class="form-group col-sm-6 col-xs-6">
-                        {% if form.name.errors %}
-                            <style>
-                                #id_name{
-                                    border-bottom: solid 1px red;
-                                }
-                            </style>
-                        {% endif %}
                         {{ form.name }}
                     </div>
                     <div class="form-group col-sm-6 col-xs-6">
-                        {% if form.phone.errors %}
-                            <style>
-                                #id_phone{
-                                    border-bottom: solid 1px red;
-                                }
-                            </style>
-                        {% endif %}
                         {{ form.phone }}
                     </div>
+
+                    <div id="loading" style="display:none;">
+                        <i class="fa fa-spinner fa-pulse fa-5x"></i>
+                    </div>
+                    <div id="form_ajax" style="display:none;">
+                        <i class="fa fa-thumbs-o-up fa-5x"></i>
+                    </div>
+
                     <div class="formcontent">
                         <div class="col-sm-6 col-xs-6">
-                            <button type="submit" class="btn">Замовити</button>
+                            <button id="sendbutton" type="submit" class="btn">Замовити</button>
                         </div>
                         <div class="tel col-sm-6 col-xs-6">
                             <span>aбо телефонуй</span>
