change map section

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="tel col-sm-6 col-xs-6">
                             <span>aбо телефонуй</span>
-                            <a href=""><i class="fa fa-phone fa-1x"></i>088 123 55 88</a>
+                            <a href="tel:0881235588"><i class="fa fa-phone fa-1x"></i>088 123 55 88</a>
                         </div>
                     </div>
                 </form>
@@ -161,7 +161,7 @@
             <div class="row">
                 <div id="blocknews1" class="col-md-3 col-sm-6 col-xs-6">
                     <div class="infoblock">
-                        <span>Кава + книга1</span>
+                        <span>Кава + книга</span>
                         <p id="news1">
                             Перші книжки вже в кав"ярні. Приходьте, обмінюймося прочитаними книжками, давайте разом робити свій світ цікавішим ^_^
                         </p>
@@ -177,7 +177,7 @@
                 </div>
                 <div id="blocknews3" class="col-md-3 col-sm-6 col-xs-6">
                     <div class="infoblock">
-                        <span>Імунний чай з імбирем </span>
+                        <span>Імунний чай з імбирем</span>
                         <p id="news3">
                             Осінь настала холодно стало... Спробуйте смачний імунний чай з імбирем , лимоном та журавлиною . Смакота!!! Гріємо руки та насолоджуємося осінню.
                         </p>
@@ -211,12 +211,11 @@
             </div>
         </div>
     </section>
-
     <section class="map">
         <span id="cont" style="position: relative; top: 0; padding: 0; margin: 0;"></span>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 col-sm-5 col-xs-12">
+                <div class="col-md-4 col-sm-5 col-xs-12 pull-right">
                     <div class="info">
                         <div class="cl-md-12 col-sm-12 col-xs-12">
                         <div class="contacts">
@@ -236,7 +235,9 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-7 col-xs-12">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20137.559504451514!2d26.428556443174035!3d50.88310231602039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472f485004c70891%3A0x5557f0824d95eb89!2z0JrQvtGB0YLQvtC_0ZbQu9GMLCDQoNGW0LLQvdC10L3RgdGM0LrQsCDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1suk!2sua!4v1445160659955" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="maps embed-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20137.559504451514!2d26.428556443174035!3d50.88310231602039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472f485004c70891%3A0x5557f0824d95eb89!2z0JrQvtGB0YLQvtC_0ZbQu9GMLCDQoNGW0LLQvdC10L3RgdGM0LrQsCDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1suk!2sua!4v1445160659955" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
