--- a/templates/test.html
+++ b/templates/test.html
@@ -4,29 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-
-    <style>
-        #form_ajax_error, .errorlist {
-            color: red;
-        }
-    </style>
+    {% include "loadcss.html" %}
 </head>
 <body>
-    <form id="ajaxform" action="{% url "test" %}" method="POST">
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {{ form.as_p }}
-        <div id="loading" style="display:none;">
-            <span id="load_text">loading...</span>
-        </div>
-        <div id="form_ajax" style="display:none;">
-            <span style="color: green;">Form submit successfully.</span>
-        </div>
-        <div id="form_ajax_error" style="display:none;">
-            <span>Can not submit data due to errors.</span>
-        </div>
-        <p id="sendwrapper"><input type="submit" value="Send" id="sendbutton"/></p>
-    </form>
+
+
 
 {% include "loadjs.html" %}
 </body>
